--- a/apps/.env.example
+++ b/apps/.env.example
@@ -2,7 +2,7 @@ APPLICATION_ENV=local
 
 APP_MODE=DEVELOPMENT
 
-BASE_URL=http://idy.local
+BASE_URL=https://idy.local
 
 # DATABASE
 
@@ -11,3 +11,17 @@ DB_HOST=localhost
 DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
+
+IDEA_DB_ADAPTER=
+IDEA_DB_HOST=
+IDEA_DB_USERNAME=
+IDEA_DB_PASSWORD=
+IDEA_DB_NAME=
+
+IDEA_MAIL_DRIVER=
+IDEA_MAIL_FROM_NAME=
+IDEA_MAIL_FROM_EMAIL=
+IDEA_MAIL_SMTP_HOST=
+IDEA_MAIL_SMTP_PORT=
+IDEA_MAIL_SMTP_USERNAME=
+IDEA_MAIL_SMTP_PASSWORD=
