--- a/apps/.env.example
+++ b/apps/.env.example
@@ -4,19 +4,13 @@ APP_MODE=DEVELOPMENT
 
 BASE_URL=https://idy.local
 
-# DATABASE
+# IDEA MODULE
 
-DB_ADAPTER=Phalcon\Db\Adapter\Pdo\Mysql
-DB_HOST=localhost
-DB_NAME=
-DB_USERNAME=
-DB_PASSWORD=
-
-IDEA_DB_ADAPTER=
-IDEA_DB_HOST=
+IDEA_DB_ADAPTER=Phalcon\Db\Adapter\Pdo\Mysql
+IDEA_DB_HOST=localhost
+IDEA_DB_NAME=
 IDEA_DB_USERNAME=
 IDEA_DB_PASSWORD=
-IDEA_DB_NAME=
 
 IDEA_MAIL_DRIVER=
 IDEA_MAIL_FROM_NAME=
